--- a/templates/register.html
+++ b/templates/register.html
@@ -1,72 +1,45 @@
-<!DOCTYPE html>
-<!--just temporary for testing register route-->
-<!-- note i pretty much copied what we had in html for the login route-->
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Our Stuff</title>
-  </head>
-  <body>
-    <h1>Register for an account</h1>
+{% extends "base.html" %}
+{% block content %}
+  <form method="POST" action="">
+    {{ form.hidden_tag() }} <!--don't forget this-->
 
-    <!--displays the flash messages-->
-    <div class="col-md-8">
-          {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-              {% for category, message in messages %}
-                <div class="alert alert-{{ category }}">
-                  {{ message }}
-                </div>
-              {% endfor %}
-            {% endif %}
-          {% endwith %}
-          {% block content %}{% endblock %}
-    </div>
-
-    <form method="POST" action="">
-      {{ form.hidden_tag() }} <!--don't forget this-->
-
-      {{ form.email.label() }}
-      {{ form.email() }}
+    {{ form.email.label() }}
+    {{ form.email() }}
+    <br />
+    <br />
+    {{ form.password.label() }}
+    {{ form.password() }}
+    <br />
+    <br />
+    {{ form.fname.label() }}
+    {{form.fname() }}
+    <br />
       <br />
-  		<br />
-      {{ form.password.label() }}
-      {{ form.password() }}
-      <br />
-  		<br />
-	  {{ form.fname.label() }}
-	  {{form.fname() }}
-	  <br />
-	  	<br />
-	  {{ form.lname.label() }}
-	  {{form.lname() }}
-	  <br />
-	  <br />
-	  {{form.dob.label() }}
-	  {{form.dob() }}
-	  <br />
-	  <br />
-	  {{form.street.label() }}
-	  {{form.street() }}
-	  <br />
-	  <br />
-	  {{form.city.label() }}
-	  {{form.city() }}
-	  <br />
-	  <br />
-	  {{form.province.label() }}
-	  {{form.province() }}
-	  <br />
-	  <br />
-	  {{form.postalCode.label() }}
-	  {{form.postalCode() }}
-	  <br />
-	  <br />
-	  
-	  {{ form.submit() }}
-    </form>
-  </body>
-</html>
+    {{ form.lname.label() }}
+    {{form.lname() }}
+    <br />
+    <br />
+    {{form.dob.label() }}
+    {{form.dob() }}
+    <br />
+    <br />
+    {{form.street.label() }}
+    {{form.street() }}
+    <br />
+    <br />
+    {{form.city.label() }}
+    {{form.city() }}
+    <br />
+    <br />
+    {{form.province.label() }}
+    {{form.province() }}
+    <br />
+    <br />
+    {{form.postalCode.label() }}
+    {{form.postalCode() }}
+    <br />
+    <br />
 
-	
-	
+    {{ form.submit() }}
+  </form>
+{% endblock content%}
