--- a/templates/browse.html
+++ b/templates/browse.html
@@ -1,28 +1,32 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>Browse All Items</h1>
+      <h1>Browse All Items</h1>
+      <div class="row">
+        <div class="col">
 
-  <br>
-  <br>
+            <br>
+            <br>
 
-  <ul>
-      {% for row in data %}
-      <tr>
-  <b>name:</b>
-  <td><a>{{row[0]}}</a></td>
-  <br>
-  <b>category:</b>
-    <td>{{row[1]}}</td>
-  <br>
-  <b>description:</b>
-  <td>{{row[3]}}</td>
-  <br>
-  <b>daily rate:</b>
-  <td>{{row[4]}}</td>
-  <br>
-  <br>
-  <br>
-      </tr>
-      {% endfor %}
-  </ul>
+            <ul>
+                {% for row in data %}
+                <tr>
+            <b>name:</b>
+            <td><a>{{row[0]}}</a></td>
+            <br>
+            <b>category:</b>
+              <td>{{row[1]}}</td>
+            <br>
+            <b>description:</b>
+            <td>{{row[3]}}</td>
+            <br>
+            <b>daily rate:</b>
+            <td>{{row[4]}}</td>
+            <br>
+            <br>
+            <br>
+                </tr>
+                {% endfor %}
+            </ul>
+        </div>
+      </div>
 {% endblock content%}
