--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-  <div class="jumbotron">
-    <div class="container text-center">
-      <h1>Our Stuff</h1>
-      <p>Description</p>
-    </div>
-  </div>
+      <div class="row">
+        <div class="col">
+          <div class="jumbotron">
+            <div class="container text-center">
+              <h1>Our Stuff</h1>
+              <p>Description</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
 {% endblock content%}
