edit user info functionality done

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
               <a class="nav-link" href="{{url_for('register')}}">Sign Up</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{url_for('profile', username="fname-lname")}}">Profile</a>
+              <a class="nav-link" href="{{url_for('profile')}}">Profile</a>
             </li>
         </ul>
         </div>
