--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,7 +6,7 @@
               <div class="col-sm">
                 <h1>{{user[2]}} {{user[3]}}</h1>
                 <br>
-                <h5 id="profile">User Information</h5> <button type="button" class="btn btn-outline-info btn-sm float-right" onclick="window.location.href='{{url_for('editProfile', username='fname-lname')}}'">Edit Info</button>
+                <h5 id="profile">User Information</h5> <button type="button" class="btn btn-outline-info btn-sm float-right" onclick="window.location.href='{{url_for('editProfile')}}'">Edit Info</button>
                 <div class="card about-card">
                   <div class="card-body about-card">
                     <table class="table user-table m-0">
