--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,8 +6,21 @@
               <div class="col-sm">
                 <h1>{{user[2]}} {{user[3]}}</h1>
                 <br>
-                <h5 id="profile">User Information</h5> <button type="button" class="btn btn-outline-info btn-sm float-right" onclick="window.location.href='{{url_for('editProfile')}}'">Edit Info</button>
-                <div class="card about-card">
+                <div class="card">
+                  <div class="row no-gutters row-bordered">
+                    <div class="d-flex col-md align-items-center">
+                      <a href="javascript:void(0)" class="card-body d-block text-body">
+                        <div class="text-muted small line-height-1">Items Rented Out</div>
+                        <div class="text-xlarge">{{o_rentals}}</div>
+                      </a>
+                    </div>
+                    <div class="d-flex col-md align-items-center">
+                      <a href="javascript:void(0)" class="card-body d-block text-body">
+                        <div class="text-muted small line-height-1">Items Rented</div>
+                        <div class="text-xlarge">{{r_rentals}}</div>
+                      </a>
+                    </div>
+                  </div>
                   <div class="card-body about-card">
                     <table class="table user-table m-0">
                       <tbody>
@@ -21,15 +34,21 @@
                         </tr>
                         <tr>
                           <td>Address:</td>
-                          <td>{{user[7]}} {{user[8]}}, {{user[9]}} {{user[10]}}</td>
+                          <td>{{user[5]}} {{user[6]}}, {{user[7]}} {{user[8]}}</td>
                         </tr>
+                        {% if interests%}
+                          <tr>
+                            <td>Interests:</td>
+                            <td>{{interests}}</td>
+                          </tr>
+                        {% endif %}
+
                       </tbody>
                     </table>
                   </div>
                 </div>
                 <br>
-                <button type="button" class="btn btn-outline-info btn-lg">View Items Rented Out</button>
-                <button type="button" class="btn btn-outline-info btn-lg">View Rental History</button>
+                <button type="button" class="btn btn-outline-info btn-sm float-right" onclick="window.location.href='{{url_for('editProfile')}}'">Edit Info</button>
               </div>
               <div class="col-sm">
               </div>
