--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,13 +9,13 @@
                 <div class="card">
                   <div class="row no-gutters row-bordered">
                     <div class="d-flex col-md align-items-center">
-                      <a href="javascript:void(0)" class="card-body d-block text-body">
+                      <a href="{{url_for('ownerTransactions')}}" class="card-body d-block text-body">
                         <div class="text-muted small line-height-1">Items Rented Out</div>
                         <div class="text-xlarge">{{o_rentals}}</div>
                       </a>
                     </div>
                     <div class="d-flex col-md align-items-center">
-                      <a href="javascript:void(0)" class="card-body d-block text-body">
+                      <a href="{{url_for('renterTransactions')}}" class="card-body d-block text-body">
                         <div class="text-muted small line-height-1">Items Rented</div>
                         <div class="text-xlarge">{{r_rentals}}</div>
                       </a>
