all transaction history types displayed

--- a/templates/ownerTransactions.html
+++ b/templates/ownerTransactions.html
@@ -1,12 +1,102 @@
 {% extends "base.html" %}
 {% block content %}
         <div class="row">
-            <div class="col-sm">
+            <div class="col">
             </div>
-            <div class="col-sm">
+            <div class="col-6">
               <h1>Transaction History</h1>
+              <h8>For items that have been rented out</h8>
+              <br>
+              <br>
+              <h6>Pending Transactions (Requires Approval)</h6>
+              {% if pending%}
+                <table class="table table-sm">
+                  <thead class="thead-light">
+                    <tr>
+                      <th scope="col">Item</th>
+                      <th scope="col">Duration</th>
+                      <th scope="col">Pick Up Time</th>
+                      <th scope="col">Drop Off Time</th>
+                      <th scope="col">Renter's Email</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    {% for row in pending %}
+                      <tr>
+                        <td>{{row[3]}}</td>
+                        <td>{{row[5]}} days</td>
+                        <td>{{row[6]}}</td>
+                        <td>{{row[7]}}</td>
+                        <td>{{row[1]}}<button type="button" class="btn btn-info btn-sm btn float-right">Approve</button></td>
+                      </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+              {% else %}
+              <h8>None at the moment</h8>
+              {% endif %}
+              <br>
+              <br>
+              <h6>Booked Transactions</h6>
+              {% if booked%}
+                <table class="table table-sm">
+                  <thead class="thead-light">
+                    <tr>
+                      <th scope="col">Item</th>
+                      <th scope="col">Duration</th>
+                      <th scope="col">Pick Up Time</th>
+                      <th scope="col">Drop Off Time</th>
+                      <th scope="col">Renter's Email</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    {% for row in booked %}
+                      <tr>
+                        <td>{{row[3]}}</td>
+                        <td>{{row[5]}} days</td>
+                        <td>{{row[6]}}</td>
+                        <td>{{row[7]}}</td>
+                        <td>{{row[1]}}<button type="button" class="btn btn-info btn-sm btn float-right">Mark as Complete</button></td>
+                      </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+              {% else %}
+              <h8>None at the moment</h8>
+              {% endif %}
+              <br>
+              <br>
+              <h6>Completed Transactions</h6>
+              {% if completed%}
+                <table class="table table-sm">
+                  <thead class="thead-light">
+                    <tr>
+                      <th scope="col">Item</th>
+                      <th scope="col">Renter's Email</th>
+                      <th scope="col">Rating</th>
+                      <th scope="col">Review</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    {% for row in completed %}
+                      <tr>
+                        <td>{{row[3]}}</td>
+                        <td>{{row[1]}}</td>
+                        <td>{{row[9]}}</td>
+                        {% if row[10] != "0"%}
+                          <td>{{row[10]}}</td>
+                        {% else %}
+                          <td>None</td>
+                        {% endif %}
+                      </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+              {% else %}
+              <h8>None at the moment</h8>
+              {% endif %}
             </div>
-            <div class="col-sm">
+            <div class="col">
             </div>
         </div>
 {% endblock content%}
