--- a/templates/profile.html
+++ b/templates/profile.html
@@ -48,6 +48,7 @@
                   </div>
                 </div>
                 <br>
+                <button type="button" class="btn btn-outline-info btn-sm float-right" onclick="window.location.href='{{url_for('logout')}}'">Logout</button> <!--change the margins -->
                 <button type="button" class="btn btn-outline-info btn-sm float-right" onclick="window.location.href='{{url_for('editProfile')}}'">Edit Info</button>
               </div>
               <div class="col-sm">
