--- a/templates/base.html
+++ b/templates/base.html
@@ -29,12 +29,18 @@
             </li>
           </ul>
           <ul class="navbar-nav navbar-right">
+            {% if g.user %}
+              <li class="nav-item">
+                <a class="nav-link" href="{{url_for('auth.logout')}}">Logout</a>
+              </li>
+            {% else %}
             <li class="nav-item">
-              <a class="nav-link" href="{{url_for('login')}}">Login</a>
+              <a class="nav-link" href="{{url_for('auth.login')}}">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{url_for('register')}}">Sign Up</a>
+              <a class="nav-link" href="{{url_for('auth.register')}}">Sign Up</a>
             </li>
+            {% endif %}
             <li class="nav-item">
               <a class="nav-link" href="{{url_for('profile')}}">Profile</a>
             </li>
