--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
         <div class="row">
-            <div class="col-sm">
+            <div class="col-sm-3">
             </div>
-            <div class="col-sm">
+            <div class="col-sm-6">
               <h1>Account Login</h1>
               <form method="POST" action="">
                 {{ form.hidden_tag() }}
@@ -20,7 +20,8 @@
                 </div>
               </form>
             </div>
-            <div class="col-sm">
+            <div class="col-sm-3">
             </div>
+          
         </div>
 {% endblock content%}
