--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
         <div class="row">
-            <div class="col-sm-3">
+            <div class="col-sm">
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm">
               <h1>Account Login</h1>
               <form method="POST" action="">
                 {{ form.hidden_tag() }}
@@ -15,13 +15,15 @@
                   {{ form.password.label(class="form-control-label") }}
                   {{ form.password(class="form-control form-control-md", placeholder="Enter Password") }}
                 </div>
-                <div class="form-group">
-                {{ form.submit(class="btn btn-outline-info") }}
+                <div class="form-group d-flex justify-content-between">
+                  {{ form.submit(class="btn btn-primary") }}
+                  <button type="button" class="btn btn-link">
+                    <a href="{{url_for('auth.register')}}">Need an account? Sign up here!</a>
+                  </button>
                 </div>
               </form>
             </div>
-            <div class="col-sm-3">
+            <div class="col-sm">
             </div>
-          
         </div>
 {% endblock content%}
