--- a/static/custom.css
+++ b/static/custom.css
@@ -1,5 +1,14 @@
 h1{
-  padding-top: 25px;
+  padding-top: 10;
+  padding-bottom: 10;
+}
+
+.user-card{
+  border: none;
+  background-color:#f8f9fa;
+}
+.text-user-stats{
+  color: #91972A;
 }
 
 #profile{
@@ -7,25 +16,42 @@ h1{
   padding-right: 10px;
   margin-bottom: 20px;
 }
-.user-table td {
-    padding-right: 0;
-    padding-left: 0;
-    border: 0;
+
+.transaction-table{
+  table-layout: fixed;
+  overflow-wrap: break-word;
+  word-wrap:break-word;
+  margin-bottom: 30px;
 }
 
-.about-card{
-  padding-right: 0;
+.rating-col{
+  width: 120px;
+}
+#rating{
+  padding-left: 40px;
+}
+
+#td-thickness{
+  font-weight: 500;
+}
+
+}
+.user-table td {
+    padding-right: 5;
+    padding-left: 0;
+    border: 5;
+
+}
+
+.user-info-card{
+  padding-right: 1;
   padding-left: 1;
   padding-top: 0;
-  padding-bottom: 0;
+  padding-bottom: 4;
 }
 
 .text-light {
-    color: #babbbc !important;
-}
-
-.card .row-bordered>[class*=" col-"]::after {
-    border-color: rgba(24,28,33,0.075);
+    color: #7d8285 !important;
 }
 
 .text-xlarge {
