--- a/templates/editProfile.html
+++ b/templates/editProfile.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
         <div class="row">
-          <div class="col-sm">
+          <div class="col-3">
           </div>
-          <div class="col-sm">
+          <div class="col-6">
             <h1>Edit Information</h1>
             <form method="POST" action="">
               {{ form.hidden_tag() }}
@@ -20,10 +20,6 @@
               <div class="form-group">
                 {{ form.email.label(class="form-control-label") }}
                 {{ form.email(class="form-control form-control-md") }}
-              </div>
-              <div class="form-group">
-                {{ form.password.label(class="form-control-label") }}
-                {{ form.password(class="form-control form-control-md") }}
               </div>
               <div class="form-group">
                 <label>Date of Birth</label>
@@ -52,7 +48,7 @@
               </div>
             </form>
           </div>
-          <div class="col-sm">
+          <div class="col-3">
           </div>
         </div>
 {% endblock content%}
