--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
                   {{ form.password(class="form-control form-control-md", placeholder="Enter Password") }}
                 </div>
                 <div class="form-group d-flex justify-content-between">
-                  {{ form.submit(class="btn btn-primary") }}
+                  {{ form.submit(class="btn btn-outline-info") }}
                   <button type="button" class="btn btn-link">
                     <a href="{{url_for('auth.register')}}">Need an account? Sign up here!</a>
                   </button>
