--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,40 +1,40 @@
 {% extends "base.html" %}
 {% block content %}
           <div class="row">
-              <div class="col-sm">
+              <div class="col-3">
               </div>
-              <div class="col-sm">
+              <div class="col-6">
                 <h1>{{g.user['First_name']}} {{g.user['Last_name']}}</h1>
                 <br>
-                <div class="card">
-                  <div class="row no-gutters row-bordered">
-                    <div class="d-flex col-md align-items-center">
-                      <a href="{{url_for('ownerTransactions')}}" class="card-body d-block text-body">
-                        <div class="text-muted small line-height-1">Items Rented Out</div>
+                <div class="card user-card">
+                  <div class="row">
+                    <div class="d-flex col-md">
+                      <a href="{{url_for('ownerTransactions')}}" class="card-body text-user-stats">
+                        <div class="text-muted">Items Rented Out</div>
                         <div class="text-xlarge">{{o_rentals}}</div>
                       </a>
                     </div>
-                    <div class="d-flex col-md align-items-center">
-                      <a href="{{url_for('renterTransactions')}}" class="card-body d-block text-body">
-                        <div class="text-muted small line-height-1">Items Rented</div>
+                    <div class="d-flex col-md">
+                      <a href="{{url_for('renterTransactions')}}" class="card-body text-user-stats">
+                        <div class="text-muted">Items Borrowed</div>
                         <div class="text-xlarge">{{r_rentals}}</div>
                       </a>
                     </div>
                   </div>
-                  <div class="card-body about-card">
-                    <table class="table user-table m-0">
+                  <div class="card-body user-info-card">
+                    <table class="table user-table m-0 ">
                       <tbody>
                         <tr>
-                          <td>Email:</td>
+                          <td id ="td-thickness">Email:</td>
                           <td>{{g.user['Email']}}</td>
                         </tr>
                         <tr>
-                          <td>Date of Birth:</td>
+                          <td id ="td-thickness">Date of Birth:</td>
                           <td>{{g.user['DoB']}}</td>
                         </tr>
                         <tr>
-                          <td>Address:</td>
-                          <td>{{g.user['Street_address']}}, {{g.user['City']}}, {{g.user['Province']}}, {{g.user['Postal_code']}}</td>
+                          <td id ="td-thickness">Address:</td>
+                          <td>{{g.user['Street_address']}}, {{g.user['City']}}, {{g.user['Province']}} {{g.user['Postal_code']}}</td>
                         </tr>
                         {% if interests%}
                           <tr>
@@ -47,9 +47,9 @@
                   </div>
                 </div>
                 <br>
-                <button type="button" class="btn btn-outline-info btn-sm float-right" onclick="window.location" href="{{url_for('editProfile')}}">Edit Info</button>
+                <button type="button" class="btn btn-outline-info btn-sm float-right" onclick="window.location.href='{{ url_for('editProfile') }}'">Edit Profile</button>
               </div>
-              <div class="col-sm">
+              <div class="col-3">
               </div>
           </div>
 
