--- a/templates/register.html
+++ b/templates/register.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
         <div class="row">
-          <div class="col-sm">
+          <div class="col-3">
           </div>
-          <div class="col-sm">
+          <div class="col-6">
             <h1>Sign Up</h1>
             <form method="POST" action="">
               {{ form.hidden_tag() }}
@@ -52,7 +52,7 @@
               </div>
             </form>
           </div>
-          <div class="col-sm">
+          <div class="col-3">
           </div>
         </div>
 {% endblock content%}
