--- a/templates/renterTransactions.html
+++ b/templates/renterTransactions.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-<!--TODO: Fix margins of headings instead of using <br> , add text wrapping to columns (maybe add a read more option for the reviews)-->
         <div class="row">
             <div class="col">
             </div>
@@ -11,7 +10,7 @@
               <br>
               <h6>Pending Transactions (Requires Approval from Owner)</h6>
               {% if pending%}
-                <table class="table table-sm">
+                <table class="table table-sm transaction-table">
                   <thead class="thead-light">
                     <tr>
                       <th scope="col">Item</th>
@@ -36,11 +35,9 @@
               {% else %}
               <h8>None at the moment</h8>
               {% endif %}
-              <br>
-              <br>
               <h6>Ongoing Rentals</h6>
               {% if booked%}
-                <table class="table table-sm">
+                <table class="table table-sm transaction-table">
                   <thead class="thead-light">
                     <tr>
                       <th scope="col">Item</th>
@@ -65,28 +62,31 @@
               {% else %}
               <h8>None at the moment</h8>
               {% endif %}
-              <br>
-              <br>
               <h6>Completed Transactions</h6>
               {% if complete%}
-                <table class="table table-sm">
+                <table class="table table-sm transaction-table">
                   <thead class="thead-light">
                     <tr>
-                      <th scope="col">Item</th>
-                      <th scope="col">Your Rating</th>
-                      <th scope="col">Your Review</th>
+                      <th scope="col" >Item</th>
                       <th scope="col">Owners's Email</th>
+                      <th scope="col" class="rating-col">Your Rating</th>
+                      <th scope="col">Your Review</th>
+
                     </tr>
                   </thead>
                   <tbody>
                     {% for row in complete %}
                       <tr>
-                        <td>{{row[3]}}</td>
-                        {% if row[9] != None%}
-                          <td>{{row[9]}}</td>
+                        <td>{{row[3]}}</td> <!--item name-->
+                        <td class="overflow"><!--owner email-->
+                          <span>{{row[2]}}</span> <br>
+                          <span><button type="button" class="btn btn-info btn-sm float-left">Report User</button></span>
+                        </td>
+                        {% if row[9] != None%}<!--rating or rate button-->
+                          <td id="rating">{{row[9]}}</td>
                         {% else %}
                           <td>
-                            <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#rateModal">Rate</button>
+                            <button type="button" class="btn btn-outline-info btn-sm" data-toggle="modal" data-target="#rateModal">Rate</button>
                             <div class="modal fade" id="rateModal" tabindex="-1" role="dialog" aria-labelledby="rateModalTitle" aria-hidden="true">
                               <div class="modal-dialog modal-dialog-centered" role="document">
                                 <div class="modal-content">
@@ -108,11 +108,12 @@
                             </div>
                           </td>
                         {% endif %}
-                        {% if row[10] != None%}
+
+                        {% if row[10] != None%} <!--review or review button-->
                           <td>{{row[10]}}</td>
                         {% else %}
                           <td>
-                            <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#reviewModal">Review</button>
+                            <button type="button" class="btn btn-outline-info btn-sm" data-toggle="modal" data-target="#reviewModal">Review</button>
                             <div class="modal fade" id="reviewModal" tabindex="-1" role="dialog" aria-labelledby="reviewModalTitle" aria-hidden="true">
                               <div class="modal-dialog modal-dialog-centered" role="document">
                                 <div class="modal-content">
@@ -134,7 +135,7 @@
                             </div>
                           </td>
                         {% endif %}
-                        <td>{{row[2]}} <button type="button" class="btn btn-info btn-sm float-right">Report User</button></td>
+
                       </tr>
                     {% endfor %}
                   </tbody>
